Fixed models and added operation ids for swagger api spec
