# docs/swagger.json
@@ -21,6 +21,7 @@
                     "candidate"
                 ],
                 "summary": "Enroll as a candidate for the election you are part of",
+                "operationId": "enrollCandidate",
                 "parameters": [
                     {
                         "type": "string",
@@ -87,6 +88,7 @@
                     "candidate"
                 ],
                 "summary": "Approve enrolled candidates to the election you created",
+                "operationId": "approveCandidate",
                 "parameters": [
                     {
                         "type": "string",
@@ -127,6 +129,7 @@
                     "candidate"
                 ],
                 "summary": "Unapprove enrolled candidates to the election you created",
+                "operationId": "unapproveCandidate",
                 "parameters": [
                     {
                         "type": "string",
@@ -167,6 +170,7 @@
                     "election"
                 ],
                 "summary": "Edit the election you created",
+                "operationId": "election",
                 "parameters": [
                     {
                         "description": "Edit Election",
@@ -207,6 +211,7 @@
                     "election"
                 ],
                 "summary": "Create Election if you are an Admin",
+                "operationId": "election",
                 "parameters": [
                     {
                         "description": "Election Details",
@@ -249,6 +254,7 @@
                     "election"
                 ],
                 "summary": "Get details of the election you created or you are part of",
+                "operationId": "electionP",
                 "parameters": [
                     {
                         "type": "string",
@@ -287,6 +293,7 @@
                     "election"
                 ],
                 "summary": "Delete the election you created",
+                "operationId": "electionP",
                 "parameters": [
                     {
                         "type": "string",
@@ -327,6 +334,7 @@
                     "election"
                 ],
                 "summary": "Get a list of election you are part of OR you have created",
+                "operationId": "elections",
                 "parameters": [
                     {
                         "type": "string",
@@ -387,6 +395,7 @@
                     "participant"
                 ],
                 "summary": "Delete the participant of the election you created",
+                "operationId": "participant",
                 "parameters": [
                     {
                         "description": "Delete Participant",
@@ -429,6 +438,7 @@
                     "participant"
                 ],
                 "summary": "Add participants to the election you created",
+                "operationId": "addParticipants",
                 "parameters": [
                     {
                         "type": "string",
@@ -476,6 +486,7 @@
                     "user"
                 ],
                 "summary": "Delete the student you have registered",
+                "operationId": "deleteRegisteredStudent",
                 "parameters": [
                     {
                         "type": "string",
@@ -516,6 +527,7 @@
                     "user"
                 ],
                 "summary": "Get a list of Students you've registered",
+                "operationId": "registeredStudents",
                 "parameters": [
                     {
                         "type": "string",
@@ -576,6 +588,7 @@
                     "user"
                 ],
                 "summary": "Register Students if you are an Admin",
+                "operationId": "registerStudents",
                 "parameters": [
                     {
                         "type": "file",
@@ -616,6 +629,7 @@
                     "election"
                 ],
                 "summary": "Get the results of the election you were part of or you created",
+                "operationId": "getElectionResults",
                 "parameters": [
                     {
                         "type": "string",
@@ -656,6 +670,7 @@
                     "participant"
                 ],
                 "summary": "Cast vote to the candidate of the election you are part of",
+                "operationId": "castVote",
                 "parameters": [
                     {
                         "description": "Cast Vote",
@@ -698,6 +713,7 @@
                     "auth"
                 ],
                 "summary": "Change your password",
+                "operationId": "changePassword",
                 "parameters": [
                     {
                         "description": "Change Password",
@@ -740,6 +756,7 @@
                     "auth"
                 ],
                 "summary": "Create a reset token and send email to reset password",
+                "operationId": "createResetToken",
                 "parameters": [
                     {
                         "description": "Email",
@@ -782,6 +799,7 @@
                     "auth"
                 ],
                 "summary": "User Login",
+                "operationId": "login",
                 "parameters": [
                     {
                         "description": "User Login",
@@ -825,6 +843,7 @@
                     "auth"
                 ],
                 "summary": "User Logout",
+                "operationId": "logout",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -856,6 +875,7 @@
                     "auth"
                 ],
                 "summary": "Submit OTP",
+                "operationId": "submitOTP",
                 "parameters": [
                     {
                         "description": "Verify OTP",
@@ -899,6 +919,7 @@
                     "auth"
                 ],
                 "summary": "Refresh Token",
+                "operationId": "refresh",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -930,6 +951,7 @@
                     "auth"
                 ],
                 "summary": "Reset password if you have a valid token",
+                "operationId": "resetPassword",
                 "parameters": [
                     {
                         "description": "Reset Password",
@@ -972,6 +994,7 @@
                     "auth"
                 ],
                 "summary": "Check if reset token is valid or not",
+                "operationId": "checkResetTokenValidity",
                 "parameters": [
                     {
                         "type": "string",
@@ -1012,6 +1035,7 @@
                     "auth"
                 ],
                 "summary": "Verify Email and Set Password",
+                "operationId": "verify",
                 "parameters": [
                     {
                         "description": "Verify",
@@ -1054,6 +1078,7 @@
                     "auth"
                 ],
                 "summary": "Check if verify token is valid or not",
+                "operationId": "checkVerifyTokenValidity",
                 "parameters": [
                     {
                         "type": "string",
